[gd_scene load_steps=3 format=3 uid="uid://dsel8fy47hpqm"]

[ext_resource type="Script" uid="uid://c6pe4h0ky7cxy" path="res://scripts/level_one.gd" id="1_ojold"]
[ext_resource type="PackedScene" uid="uid://bd6fitnir8evx" path="res://cenas/cardmanager.tscn" id="2_kfi32"]

[node name="level_one" type="Node2D"]
script = ExtResource("1_ojold")

[node name="bg" type="ColorRect" parent="."]
offset_right = 1154.0
offset_bottom = 649.0
scale = Vector2(1.11432, 1.10168)
color = Color(0.227451, 0.278431, 0.196078, 1)

[node name="Label" type="Label" parent="."]
offset_left = -10.0
offset_top = 23.0
offset_right = 1164.0
offset_bottom = 687.0
scale = Vector2(1.09548, 1.0399)
text = "FASE 1"
horizontal_alignment = 1

[node name="teste" type="Button" parent="."]
offset_left = 91.0
offset_top = 66.0
offset_right = 255.0
offset_bottom = 133.0
text = "completar fase"

[node name="Cardmanager" parent="." instance=ExtResource("2_kfi32")]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="PlayerHP" type="ProgressBar" parent="HUD"]
offset_left = 33.0
offset_top = 636.0
offset_right = 206.0
offset_bottom = 689.0

[node name="EnemyHP" type="ProgressBar" parent="HUD"]
offset_left = 1097.0
offset_top = 30.0
offset_right = 1239.0
offset_bottom = 72.0

[node name="DanoPlayerBtn" type="Button" parent="."]
offset_left = 238.0
offset_top = 616.0
offset_right = 368.0
offset_bottom = 679.0
text = "Dano Player -10"

[node name="DanoEnemyBtn" type="Button" parent="."]
offset_left = 1061.0
offset_top = 119.0
offset_right = 1207.0
offset_bottom = 161.0
text = "Dano Inimigo -10"

[connection signal="pressed" from="teste" to="." method="_on_teste_pressed"]
